app/public/css/home.css
/* ... */
                              .wait-name{
                                    width: 70%;
                              }



      .button-container{
            width: 100%;
            margin: 0 auto;
      }

      .button{
            display: block;
            width: 50%;
            max-width: 170px;
            padding: .85rem .3rem;
            background: #C0A4CB;
            border-radius: 15px;
            font-size: 9px;
            text-align: center;
            letter-spacing: 1.01px;
            text-decoration: none;
            text-transform: uppercase;
            color: #F8F5F5;
            border: none;
        }

      }

      .button:hover{
           background:#514f55;
           transform: scale(0.95);
      }


      /* -------------Reservations ------------ */

      .form{
            background: white;
            border-radius: 8px;
            min-height: 230px;
            padding: 1rem 1rem 2rem;
            width: 85%;
            margin: 4rem auto 2rem;
            box-shadow: rgba(186, 143, 186, 0.35) 0px 5px 15px;
      }
            .form > .data-title{
                  font-size: 16px;
                  font-weight: 500;
                  text-transform: uppercase;
                  letter-spacing: 0.42px;
                  border-bottom: 1px solid  rgba(216,216,216, .3);
                  padding: .5rem 0 1rem;
                  color: #666262;
            }
            
            .form-content{
                  padding-top: 1rem;
            }

            .form-content-primary{
                  flex-direction: column;
            }

                  .form-input-container{
                        margin-bottom: .5rem;
                        border: 1px solid lightgrey;
                        padding: 1px;
                        border-radius: 5px;
                        padding: .5rem .5rem;
                  }
                  

                        label{
                              font-size: 10px;
                              color: #A477B6;
                              letter-spacing: 0.22px;
                              margin-left: 5px;
                        }

                        input{
                              border: none;
                              outline: none;
                              padding: .25rem;
                              width: 100%;
                        }

                        input[type=text]{
                              font-size: 14px;
                              
                        }

                        ::placeholder{
                              font-size: 10px;
                              text-transform: uppercase;
                              
                        }

                        .form-content-primary > .form-input-container{
                              width: 100%;
                        }
                        .form-content-secondary > .form-input-container{
                              width: 60%;
                        }

                        .submit-form{
                              margin-bottom: .5rem;
                              background: #C0A4CB;
                              border: none;
                              width: 35%;
                              border-radius: 10px;
                              color: #f3f3f3;
                              font-size: 12px;
                              transition: background 0.1s;
                        }

                        .submit-form:hover{
                              background:#828282;
                        }

                        .empty{
                              border: 2px solid red;
                        }

                        .submitted{
                              background-color: #b1d8b8
                        }

                       
      
                  /*---------------- Media Queries----------*/
   
                  @media only screen and (min-width: 425px) {
                  
                       
                        body{
                             background-image: none;
                             background: #C0A4CB;
                        }
                      }
                       

   

